@@ -3,11 +3,11 @@
 export(format_pp_meta_age)
 export(format_pp_meta_fusions)
 export(format_pp_meta_gender)
-export(fusion2pp)
-export(fusion2pp_meta)
+export(fusions2pp)
+export(fusions2pp_meta)
 export(fusions_filter)
 export(get_pp_samplegroup)
-export(mut2pp)
+export(muts2pp)
 export(set_colors)
 export(set_tools)
 import(configr)
