@@ -18,7 +18,7 @@
 #' A data frame
 #' @examples 
 #' demo_file <- system.file('extdata', 
-#' 'demo/proteinpaint/fusion2pp_fusioncatcher.txt', package = 'ngstk')
+#' 'demo/proteinpaint/fusions2pp_fusioncatcher.txt', package = 'ngstk')
 #' input_data <- read.table(demo_file, sep = '\t', header = TRUE, stringsAsFactors = FALSE)
 #' result <- fusions_filter(input_data)
 fusions_filter <- function(input_data, input_type = "common", config_file = system.file("extdata", "config/filter.toml", 
