@@ -1,10 +1,10 @@
 % Generated by roxygen2: do not edit by hand
 % Please edit documentation in R/proteinpaint_transefer.R
-\name{fusion2pp_meta}
-\alias{fusion2pp_meta}
+\name{fusions2pp_meta}
+\alias{fusions2pp_meta}
 \title{Function to convert fusion data to ProteinPaint heatmap meta rows \url{https://pecan.stjude.org/pp} input format.}
 \usage{
-fusion2pp_meta(input_data, input_type = "fusioncatcher",
+fusions2pp_meta(input_data, input_type = "fusioncatcher",
   config_file = system.file("extdata", "config/proteinpaint.toml", package =
   "ngstk"), config_list = NULL, hander_funs = NULL, mhander_funs = NULL,
   hander_extra_params = NULL, mhander_extra_params = NULL)
@@ -38,11 +38,11 @@ Function to convert fusion data to ProteinPaint heatmap meta rows \url{https://p
 }
 \examples{
 demo_file <- system.file('extdata', 
-'demo/proteinpaint/fusion2pp_fusioncatcher.txt', package = 'ngstk')
+'demo/proteinpaint/fusions2pp_fusioncatcher.txt', package = 'ngstk')
 input_data <- read.table(demo_file, sep = '\\t', header = TRUE, stringsAsFactors = FALSE)
 disease <- 'B-ALL'
 sampletype <- 'diagnose'
 input_data <- data.frame(input_data, disease, sampletype)
 input_data$disease <- as.character(input_data$disease)
-hander_data <- fusion2pp_meta(input_data, input_type = 'fusioncatcher')
+hander_data <- fusions2pp_meta(input_data, input_type = 'fusioncatcher')
 }
