@@ -39,7 +39,7 @@ Fusions hander_data filter that can be used to prepare the input data for downst
 }
 \examples{
 demo_file <- system.file('extdata', 
-'demo/proteinpaint/fusion2pp_fusioncatcher.txt', package = 'ngstk')
+'demo/proteinpaint/fusions2pp_fusioncatcher.txt', package = 'ngstk')
 input_data <- read.table(demo_file, sep = '\\t', header = TRUE, stringsAsFactors = FALSE)
 result <- fusions_filter(input_data)
 }
