@@ -1,18 +1,18 @@
 % Generated by roxygen2: do not edit by hand
 % Please edit documentation in R/proteinpaint_transefer.R
-\name{fusion2pp}
-\alias{fusion2pp}
-\title{Function to convert fusion data to ProteinPaint \url{https://pecan.stjude.org/pp} input format.}
+\name{muts2pp}
+\alias{muts2pp}
+\title{Function to convert mutation data to ProteinPaint \url{https://pecan.stjude.org/pp} input format.}
 \usage{
-fusion2pp(input_data, input_type = "fusioncatcher",
+muts2pp(input_data, input_type = "iseq",
   config_file = system.file("extdata", "config/proteinpaint.toml", package =
   "ngstk"), config_list = NULL, hander_funs = NULL, mhander_funs = NULL,
   hander_extra_params = NULL, mhander_extra_params = NULL)
 }
 \arguments{
-\item{input_data}{A gene fusions data.frame need to be converted to ProteinPaint input.}
+\item{input_data}{A mutation data.frame need to be converted to ProteinPaint input.}
 
-\item{input_type}{Point the input data format (fusioncatcher or others)}
+\item{input_type}{Point the input data format (iseq or others)}
 
 \item{config_file}{ngstk ProteinPaint configuration file path, default is 
 system.file('extdata', 'config/proteinpaint.toml', package = 'ngstk')}
@@ -34,15 +34,14 @@ default is NULL and get value from config_file}
 A data frame
 }
 \description{
-Function to convert fusion data to ProteinPaint \url{https://pecan.stjude.org/pp} input format.
+Function to convert mutation data to ProteinPaint \url{https://pecan.stjude.org/pp} input format.
 }
 \examples{
 demo_file <- system.file('extdata', 
-'demo/proteinpaint/fusion2pp_fusioncatcher.txt', package = 'ngstk')
+'demo/proteinpaint/muts2pp_iseq.txt', package = 'ngstk')
 input_data <- read.table(demo_file, sep = '\\t', header = TRUE, stringsAsFactors = FALSE)
-disease <- 'B-ALL'
-sampletype <- 'diagnose'
-input_data <- data.frame(input_data, disease, sampletype)
+disease <- 'T-ALL'
+input_data <- data.frame(input_data, disease)
 input_data$disease <- as.character(input_data$disease)
-hander_data <- fusion2pp(input_data, input_type = 'fusioncatcher')
+muts2pp(input_data, input_type = 'iseq')
 }
